# Optimization-LLVM

./: .gitignore  CMakeLists.txt  README.md
TP-Final/: notas.txt  poly_6
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/course0/: Makefile  cmake_install.cmake
_build/course0/ex/: Makefile  cmake_install.cmake  libBasic.so.8
_build/course0/ex/test/: Makefile  cmake_install.cmake  lit.cfg
_build/course0/ex/test/Output/: add.c.script  add.c.tmp.ll  add.c.tmp.obf.ll  add.c.tmp.ref  add.c.tmp.ref.out  add_4.c.script  add_4.c.tmp  add_4.c.tmp.obf2.ll  add_4_hard.test.script  add_4_hard.test.tmp.obf2.ll  add_4_light.test.script  (+4 more)
_build/course1/: Makefile  cmake_install.cmake
_build/course1/ex/: Makefile  cmake_install.cmake  libSmartBasic.so.8
_build/course1/ex/test/: Makefile  cmake_install.cmake  lit.cfg
_build/course2/: Makefile  cmake_install.cmake
_build/course2/ex/: Makefile  cmake_install.cmake  libInstrument.so.8
_build/course2/ex/test/: Makefile  cmake_install.cmake  lit.cfg
_build/course3/: Makefile  cmake_install.cmake
_build/course3/ex/: Makefile  builtins.h  clang_config.h  cmake_install.cmake  libAntiDebug.so.8
_build/course3/ex/test/: Makefile  cmake_install.cmake  lit.cfg
_build/course4/: Makefile  cmake_install.cmake
_build/course4/ex/: Makefile  cmake_install.cmake
_build/course4/ex/test/: Makefile  cmake_install.cmake  lit.cfg
_build/course4/ex/trace2z3/: Makefile  cmake_install.cmake
_build/course5/: Makefile  cmake_install.cmake
_build/course5/ex/: Makefile  cmake_install.cmake
_build/course5/ex/test/: Makefile  cmake_install.cmake  lit.cfg
cmake/: FindZ3.cmake
course0/ex/: AbstractFilterFactory.cpp  AbstractFilterFactory.h  CMakeLists.txt  MBA.cpp  MBAHandlers.cpp  MBAHandlers.h  OpaqueConstants.cpp
course0/ex/test/: add.c  add_4.c  add_4_hard.test  add_4_light.test  lit.cfg.in
course1/ex/: CMakeLists.txt  SmartFilterFactory.cpp
course1/ex/test/: lit.cfg.in
course2/: CMakeLists.txt
course2/ex/: CMakeLists.txt  Enumerate.cpp  IdUtils.cpp  IdUtils.h  InstrumentValues.cpp  PatchConstantValues.cpp  ProfileFile.cpp  ProfileFile.h
course2/ex/Runtime/: InstrumentValuesRuntime.cpp
course2/ex/test/: crc32.c  lit.cfg.in
course3/ex/: AntiDebug.cpp  InjectBuiltin.cpp  builtins.py  clang_config.h.in
course3/ex/test/: detect_inject.c  detect_inject_no_profile.c  detect_inject_profile.c  detect_startup.c  just_inject.c
course3_viejo/ex/: AntiDebug.cpp  CMakeLists.txt  InjectBuiltin.cpp  InjectBuiltin.h
course3_viejo/ex/builtin/: detect_ptrace.c  readlink_gdb.c
course3_viejo/ex/test/: detect_inject_profile.c  lit.cfg.in
course4/ex/: CMakeLists.txt  Function2Z3.cpp  PrepareForZ3.cpp
course4/ex/test/: add.c  if.c  lit.cfg.in  poly.c
course4_viejo/ex/: CMakeLists.txt  Function2Z3.cpp
course4_viejo/ex/test/: CMakeLists.txt  cast.c  poly.c
course4_viejo/ex/trace2z3/: CMakeLists.txt  Trace2Z3.cpp
course5/ex/: CMakeLists.txt  WhiteboxMe.cpp
course5/ex/test/: arith.c  crc8.c  lit.cfg.in
course5_viejo/ex/: CMakeLists.txt
include/clang/Config/: config.h
include/llvm/Support/: VCSRevision.h
lib/: libLLVMAggressiveInstCombine.so.8  libLLVMAsmParser.so.8  libLLVMAsmPrinter.so.8  libLLVMBinaryFormat.so.8  libLLVMBitReader.so.8  libLLVMBitWriter.so.8  libLLVMCoroutines.so.8  libLLVMCoverage.so.8  libLLVMDebugInfoCodeView.so.8  libLLVMDebugInfoDWARF.so.8  libLLVMDebugInfoMSF.so.8  libLLVMDebugInfoPDB.so.8  libLLVMDemangle.so.8  libLLVMDlltoolDriver.so.8  libLLVMExecutionEngine.so.8  libLLVMFuzzMutate.so.8  libLLVMGlobalISel.so.8  libLLVMIRReader.so.8  libLLVMInstCombine.so.8  libLLVMInstrumentation.so.8  libLLVMInterpreter.so.8  libLLVMLTO.so.8  libLLVMLibDriver.so.8  libLLVMLineEditor.so.8  libLLVMLinker.so.8  libLLVMMC.so.8  libLLVMMCA.so.8  libLLVMMCDisassembler.so.8  libLLVMMCJIT.so.8  libLLVMMCParser.so.8  libLLVMMIRParser.so.8  libLLVMObjCARCOpts.so.8  libLLVMObject.so.8  libLLVMObjectYAML.so.8  libLLVMOptRemarks.so.8  libLLVMOption.so.8  libLLVMOrcJIT.so.8  libLLVMPasses.so.8  libLLVMProfileData.so.8  libLLVMRuntimeDyld.so.8  (+86 more)
lib/cmake/clang/: ClangTargets-release.cmake  ClangTargets.cmake
lib/cmake/llvm/: LLVMConfig.cmake  LLVMConfigVersion.cmake  LLVMExports-release.cmake  LLVMExports.cmake
misc/: build_llvm.sh  get_dependencies.sh
(+43 files in other folders)
